# SpotifyClient

./: Cargo.toml  README.md  rustfmt.toml  travis.yml
src/: lib.rs  main.rs
src/spotify/: album.rs  api_url_defines.rs  authorize.rs  autorize.rs  common_structs.rs  mod.rs  spotify_client_api.rs  track.rs  user_profile.rs  user_top_artist_track.rs
