[package]
name = "SpotifyTerminalClient"
version = "0.1.0"
authors = ["mykhailo.maidan@gmail.com <Mykhailo>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "oauth2_examples"


[dependencies]
reqwest = { version = "0.11.0", features = ["json"] }
tokio = { version = "1.0.2", features = ["full"] }
hyper = { version = "0.14.2", features = ["server", "http1"] }
serde = { version = "1.0.119", features = ["derive"] }
serde_urlencoded = "0.7.0"
futures = "0.3.12"
tower-service = "0.3.0"
log = "0.4.13"
anyhow = "1.0.38"
clap = "2.33.3"
async-oauth2 = "0.3.0"
